* update libbsd to 0.11.1-1

--- a/libbsd/PKGBUILD
+++ b/libbsd/PKGBUILD
@@ -4,17 +4,17 @@
 # Contributor: Gerardo Exequiel Pozzi <vmlinuz386@yahoo.com.ar>
 
 pkgname=libbsd
-pkgver=0.10.0
-pkgrel=2
+pkgver=0.11.1
+pkgrel=1
 pkgdesc='Provides useful functions commonly found on BSD systems like strlcpy()'
 arch=(x86_64 powerpc64le powerpc)
 url="https://libbsd.freedesktop.org"
 license=('custom')
-depends=('glibc')
+depends=('glibc' 'libmd')
 options=('staticlibs')
 source=("https://libbsd.freedesktop.org/releases/$pkgname-$pkgver.tar.xz"{,.asc})
-md5sums=('ead96d240d02faa5b921c0aa50c812b5'
-         'SKIP')
+sha512sums=('d2b31b3057160b130e23dc4349920c9e582f3468409e5682dc0937a514d4b90a743a3f6270f00f4b9f33abe6ca238e706f34606e9b09aeec82815b5ae9d19e5f'
+            'SKIP')
 validpgpkeys=('4F3E74F436050C10F5696574B972BF3EA4AE57A3') # Guillem Jover
 
 build() {
