--- a/ldb/PKGBUILD
+++ b/ldb/PKGBUILD
@@ -4,28 +4,21 @@
 # Contributor: Marco A Rojas <marquicus at gmail dot com>
 
 pkgname=ldb
-pkgver=2.3.0
+pkgver=2.4.0
 pkgrel=1
 epoch=1
 pkgdesc='Schema-less, ldap like, API and database'
 arch=(x86_64 powerpc64le powerpc)
 url="https://ldb.samba.org/"
-source=(https://samba.org/ftp/${pkgname}/${pkgname}-${pkgver}.tar{.gz,.asc}
-       ldb-pytevent.patch)
+source=(https://samba.org/ftp/${pkgname}/${pkgname}-${pkgver}.tar{.gz,.asc})
 license=('GPL3')
 depends=('talloc' 'libtevent.so' 'tdb' 'libtdb.so' 'popt' 'lmdb')
 makedepends=('python' 'cmocka' 'docbook-xsl' 'tevent')
 optdepends=('python: for python bindings')
 provides=(libldb.so)
 validpgpkeys=('9147A339719518EE9011BCB54793916113084025') # Samba Library Distribution Key <samba-bugs@samba.org>
-sha512sums=('7e389c0b4700a809893276d69216436ebd6d30e1f52407e4a08a1113cf14e151aed74300d8c36765c91c8f3195d8054b13a28cbdfcab031f88fd1d353e415348'
-            'SKIP'
-            '4699499fd090ab210758c4d27d7e5e69b4244f910b265870a3ef576a2ebfc2f37770d5d1637cfa9ea8de9cc6a79e398ff31be8e83ce821383526f3e025925a48')
-
-prepare() {
-  cd ${pkgname}-${pkgver}
-  patch -Np1 -i ${srcdir}/ldb-pytevent.patch
-}
+sha512sums=('6c500b723c081488bc0717b6a5b0e8966c5d8a751232f8856281a6fe4d358ae6b5878c8400a82fa666379066105fbb9259b2967313e73efabef0e1386095e2ee'
+            'SKIP')
 
 build() {
   cd ${pkgname}-${pkgver}
