--- a/xmldiff/PKGBUILD
+++ b/xmldiff/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=xmldiff
 pkgver=2.4
-pkgrel=2
+pkgrel=3
 pkgdesc="A python tool that figures out the differences between two similar XML files, in the same way the diff utility does it"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/Shoobx/xmldiff"
 license=('GPL2')
 depends=('python' 'libxslt' 'jade')
@@ -18,6 +18,7 @@ sha512sums=('d8a0c9cb850259b3288d8fb5fde50c69f24036bc46ea48f24f3d63c592ccdd2aab4
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
+  export PYTHONHASHSEED=0
   python setup.py build
 }
 
