--- a/linux-g4/config
+++ b/linux-g4/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.13.1-arch1 Kernel Configuration
+# Linux/powerpc 5.13.4-arch1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Arch POWER) 11.1.0"
 CONFIG_CC_IS_GCC=y
@@ -3087,9 +3087,14 @@ CONFIG_IEEE802154_ADF7242=m
 # CONFIG_IEEE802154_CA8210 is not set
 # CONFIG_IEEE802154_MCR20A is not set
 CONFIG_IEEE802154_HWSIM=m
+
+#
+# Wireless WAN
+#
 CONFIG_WWAN=y
-CONFIG_WWAN_CORE=m
 CONFIG_MHI_WWAN_CTRL=m
+# end of Wireless WAN
+
 # CONFIG_VMXNET3 is not set
 CONFIG_USB4_NET=m
 CONFIG_NET_FAILOVER=m
@@ -3857,6 +3862,7 @@ CONFIG_CHARGER_BQ256XX=m
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_BATTERY_GOLDFISH is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
 # CONFIG_CHARGER_UCS1002 is not set
 # CONFIG_CHARGER_BD99954 is not set
@@ -7226,11 +7232,6 @@ CONFIG_PSTORE_COMPRESS_DEFAULT="deflate"
 # CONFIG_PSTORE_CONSOLE is not set
 # CONFIG_PSTORE_PMSG is not set
 CONFIG_PSTORE_RAM=m
-CONFIG_PSTORE_ZONE=m
-CONFIG_PSTORE_BLK=m
-CONFIG_PSTORE_BLK_BLKDEV=""
-CONFIG_PSTORE_BLK_KMSG_SIZE=64
-CONFIG_PSTORE_BLK_MAX_REASON=2
 # CONFIG_SYSV_FS is not set
 CONFIG_UFS_FS=m
 # CONFIG_UFS_FS_WRITE is not set
