* update libffi to 3.4.2-1

--- a/libffi/PKGBUILD
+++ b/libffi/PKGBUILD
@@ -1,45 +1,33 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer:  Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
+# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
+# Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 # Contributor: Stéphane Gaudreault <stephane@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libffi
-pkgver=3.3
-pkgrel=4
+pkgver=3.4.2
+pkgrel=1
 pkgdesc='Portable foreign function interface library'
 arch=(x86_64 powerpc64le powerpc)
 url='https://sourceware.org/libffi/'
 license=('MIT')
 depends=('glibc')
 checkdepends=('dejagnu')
-options=(!distcc)
-source=(https://sourceware.org/pub/libffi/libffi-$pkgver.tar.gz
-	powerpc-fix.patch
-        powerpc-fix-2.patch
-        powerpc64-fix.patch
-        powerpc64-fix-2.patch
-        libffi-race-condition.patch)
-sha256sums=('72fba7922703ddfa7a028d513ac15a85c8d54c8d67f55fa5a4802885dc652056'
-            'f80413d386314a29e556afe6e8f5786ccd92752a9e840e447023e4333dfb8782'
-            '08f62dd6b0407baaf4b4c88b4adba89c22aac4f0df1d74d7b5463cfeff4a0ce9'
-            'd99004460fa7dce69d233fdb77697ff86e227e38d1564778d649ba88e3db09e7'
-            '0c595be6cf09213261aad67843e93e269dd9db751ada5428776fb73e6be240fc'
-            '2195ae52e7fe1890642d8fd6504840aa74961f335351471c0228292ebc7d1a93')
+provides=('libffi.so')
+source=(https://github.com/libffi/libffi/releases/download/v${pkgver}/libffi-${pkgver}.tar.gz)
+sha256sums=('540fb721619a6aba3bdeef7d940d8e9e0e6d2c193595bc243241b77ff9e93620')
+b2sums=('a8137bc895b819f949fd7705e405be627219c6d1fdef280253330f7407d4a548bb057d7bb0e9225d1767d42f9bf5f0ab3c455db1c3470d7cc876bb7b7d55d308')
 
 prepare() {
   cd $pkgname-$pkgver
-
-  # thank you Void
-  patch -Np0 -i ${srcdir}/powerpc-fix.patch
-  patch -Np0 -i ${srcdir}/powerpc-fix-2.patch
-  patch -Np0 -i ${srcdir}/powerpc64-fix.patch
-  patch -Np0 -i ${srcdir}/powerpc64-fix-2.patch
-  patch -Np0 -i ${srcdir}/libffi-race-condition.patch
+  autoreconf -fiv
 }
 
 build() {
   cd $pkgname-$pkgver
-  ./configure --prefix=/usr --disable-static \
+  ./configure \
+    --prefix=/usr \
+    --disable-static \
     --enable-pax_emutramp
   make
 }
@@ -51,5 +39,8 @@ check() {
 package() {
   cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
-  install -Dm644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
+  install -Dm 644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname
+  install -Dm 644 README.md -t "$pkgdir"/usr/share/doc/$pkgname
 }
+
+# vim: ts=2 sw=2 et:
