* update guile to 2.2.7-2

--- a/guile/PKGBUILD
+++ b/guile/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=guile
 pkgver=2.2.7
-pkgrel=1
+pkgrel=2
 pkgdesc='Portable, embeddable Scheme implementation written in C'
 url='https://www.gnu.org/software/guile/'
 arch=(x86_64 powerpc64le powerpc)
@@ -20,6 +20,9 @@ sha256sums=('44b4c5fbbe257ccdebea18420212c9b3e90c3c86a54920d8554039fc6769a007'
 
 prepare() {
   cd $pkgname-$pkgver
+  sed -e '/test-out-of-memory/d' -i test-suite/standalone/Makefile.am # Disable test known to fail https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=966301
+  autoreconf -if
+
   rm -rf prebuilt/32-bit-big-endian
 }
 
