* update make to 4.3-4

--- a/make/PKGBUILD
+++ b/make/PKGBUILD
@@ -5,13 +5,13 @@
 
 pkgname=make
 pkgver=4.3
-pkgrel=3
+pkgrel=4
 pkgdesc="GNU make utility to maintain groups of programs"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.gnu.org/software/make"
 license=('GPL3')
 groups=('base-devel')
-depends=('glibc') # 'guile')
+depends=('glibc' 'guile')
 source=("https://ftp.gnu.org/gnu/${pkgname}/${pkgname}-${pkgver}.tar.lz"{,.sig})
 md5sums=('d5c40e7bd1e97a7404f5d3be982f479a'
          'SKIP')
