* update llvm to 12.0.1-1.1

--- a/llvm/PKGBUILD
+++ b/llvm/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=('llvm' 'llvm-libs' 'llvm-ocaml')
 pkgver=12.0.1
-pkgrel=1
+pkgrel=1.1
 _ocaml_ver=4.11.1
 arch=(x86_64 powerpc64le powerpc)
 url="https://llvm.org/"
@@ -56,10 +56,6 @@ prepare() {
 build() {
   cd "$srcdir/llvm-$pkgver.src/build"
 
-  case "${CARCH}" in
-    powerpc) EXTRA_CMAKE_FLAGS="-DVOID_CXX_OPT_FLAGS=-Os" ;;
-  esac
-
   cmake .. -G Ninja \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
@@ -74,7 +70,7 @@ build() {
     -DLLVM_ENABLE_SPHINX=ON \
     -DLLVM_ENABLE_DOXYGEN=OFF \
     -DSPHINX_WARNINGS_AS_ERRORS=OFF \
-    -DLLVM_BINUTILS_INCDIR=/usr/include ${EXTRA_CMAKE_FLAGS}
+    -DLLVM_BINUTILS_INCDIR=/usr/include
   ninja all ocaml_doc
 }
 
