--- a/haskell/ghc/PKGBUILD
+++ b/haskell/ghc/PKGBUILD
@@ -13,20 +13,22 @@ shopt -s extglob
 pkgbase=ghc
 pkgname=(ghc-libs ghc ghc-static)
 pkgver=8.10.2
-pkgrel=1
+pkgrel=1.1
 pkgdesc='The Glasgow Haskell Compiler'
 arch=(x86_64 powerpc64le)
 url='https://www.haskell.org/ghc/'
 license=('custom')
 makedepends=('ghc-static' 'perl' 'libxslt' 'docbook-xsl' 'python-sphinx' 'haskell-hscolour'
-             'texlive-bin' 'texlive-latexextra' 'ttf-dejavu' 'alex' 'happy' 'time')
+             'texlive-bin' 'texlive-latexextra' 'ttf-dejavu' 'alex' 'happy' 'time' 'numactl')
 source=("https://downloads.haskell.org/~ghc/$pkgver/$pkgbase-${pkgver}-src.tar.xz"
-        ghc-rebuild-doc-index.hook ghc-register.hook ghc-unregister.hook)
+        ghc-rebuild-doc-index.hook ghc-register.hook ghc-unregister.hook
+        sphinx-unicode.patch)
 noextract=("$pkgbase-${pkgver}-src.tar.xz")
 sha512sums=('6c3f1311feab3665419a301b17fcb09d303ec822f8eb8c4021edfacff00d9b52e71895bed0e58f11d8f7970415bd8c6f95ffde1294afe795e15607199b20cefc'
             'd69e5222d1169c4224a2b69a13e57fdd574cb1b5932b15f4bc6c7d269a9658dd87acb1be81f52fbcf3cb64f96978b9943d10cee2c21bff0565aaa93a5d35fcae'
             '5f659651d8e562a4dcaae0f821d272d6e9c648b645b1d6ab1af61e4dd690dc5a4b9c6846753b7f935963f001bb1ae1f40cd77731b71ef5a8dbc079a360aa3f8f'
-            '3bdbd05c4a2c4fce4adf6802ff99b1088bdfad63da9ebfc470af9e271c3dd796f86fba1cf319d8f4078054d85c6d9e6a01f79994559f24cc77ee1a25724af2e6')
+            '3bdbd05c4a2c4fce4adf6802ff99b1088bdfad63da9ebfc470af9e271c3dd796f86fba1cf319d8f4078054d85c6d9e6a01f79994559f24cc77ee1a25724af2e6'
+            '2a16708fdbc5f156703e10619774270a439e0759f4e9f9291b9c04ba53e61075ca3f6483ac56d083f382bafabfc99da06426b9fa3db3607a4e1c5bd6ee7085f1')
 
 prepare() {
   # Need to extract this tarball with a UTF-8 locale instead of a chroot's "C"
@@ -35,6 +37,8 @@ prepare() {
   LANG=en_US.UTF-8 bsdtar xf $pkgbase-${pkgver}-src.tar.xz
 
   cd ghc-$pkgver
+
+  patch -Np1 -i ${srcdir}/sphinx-unicode.patch
 
   cp mk/build.mk{.sample,}
   sed -i '1iBuildFlavour = perf' mk/build.mk
@@ -104,7 +108,7 @@ package_ghc() {
 package_ghc-libs() {
   pkgdesc='The Glasgow Haskell Compiler - Dynamic Libraries'
   install='ghc.install'
-  depends=('gmp' 'libffi' 'perl')
+  depends=('gmp' 'libffi' 'perl' 'numactl')
   provides=('haskell-array=0.5.4.0'
             'haskell-base=4.14.1.0'
             'haskell-binary=0.8.8.0'
