* update linux to 5.13.5.arch1-1

--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgbase=linux
-pkgver=5.13.1.arch1
+pkgver=5.13.5.arch1
 pkgrel=1
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
@@ -25,10 +25,11 @@ validpgpkeys=(
   'ABAF11C65A2970B130ABE3C479BE3E4300411886'  # Linus Torvalds
   '647F28654894E3BD457199BE38DBBDC86092693E'  # Greg Kroah-Hartman
   'A2FF3A36AAA56654109064AB19802F8B0D70FC30'  # Jan Alexander Steffens (heftig)
+  'C7E7849466FE2358343588377258734B41C31549'  # David Runge <dvzrv@archlinux.org>
 )
 sha256sums=('SKIP'
             'a59601519e4488246b79a9a86bc66e607004619c08566898492a4d90a7826c3f'
-            'cf5a113b6675da3fdff2f0320a9f02e4d2476c2a5ed92325804e1a20876f45e2')
+            '0034f650c5a576523fd2edeedff579c71c4ecc90d7ad47c7af0b41f02762d42d')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
