--- a/js78/PKGBUILD
+++ b/js78/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=js78
-pkgver=78.11.0
+pkgver=78.12.0
 pkgrel=1
 pkgdesc="JavaScript interpreter and libraries - Version 78"
 arch=(x86_64 powerpc64le powerpc)
@@ -12,13 +12,16 @@ depends=(gcc-libs readline zlib sh)
 makedepends=(zip autoconf2.13 python-setuptools python-psutil rust llvm clang lld)
 checkdepends=(mercurial git)
 _relver=${pkgver}esr
+_whissi_patches_ver=78esr-patches-15
 source=(https://archive.mozilla.org/pub/firefox/releases/$_relver/source/firefox-$_relver.source.tar.xz{,.asc}
         0001-Fixes-for-LTO-PGO-support.patch
-        0002-Bug-1667736-Update-packed_simd-to-compile-on-Rust-1..patch)
-sha256sums=('38394b5937be3839104b3a097d71987c06392d4d8be0d3004182f1d1fbfc577e'
+        rust-configure.patch
+        https://dev.gentoo.org/~whissi/mozilla/patchsets/firefox-${_whissi_patches_ver}.tar.xz)
+sha256sums=('8b55a8b8254ddde03db83f44c9fecfc4ae86ea126b5445a0355d915830bd7410'
             'SKIP'
             '926a573eabe3b6177363b795ed5e5641b4a4ebc6d7cfa093f11e1779ac0f897c'
-            '5f7c132fe7dab5e412cfd24c0c542531d4bfbcf030c736d46993845ba262cf9c')
+            'd6eb063743f07ba8aaacf7c5f915253422f8096560c37c3c529ed1c34910a002'
+            '4417b233d40105ef2908d34ffc288fb9da4af3bbeadc3d6732c229c011e81b4c')
 validpgpkeys=('14F26682D0916CDD81E37B6D61B7B526D98F0353') # Mozilla Software Releases <release@mozilla.com>
 
 # Make sure the duplication between bin and lib is found
@@ -28,11 +31,14 @@ prepare() {
   cd firefox-$pkgver
   mkdir obj
 
-  # Post-78 fixes to fix LTO with LLVM 11
-  patch -Np1 -i ../0001-Fixes-for-LTO-PGO-support.patch
-
-  # Fix build with Rust 1.48
-  patch -Np1 -i ../0002-Bug-1667736-Update-packed_simd-to-compile-on-Rust-1..patch
+  local src
+  for src in "${source[@]}"; do
+    src="${src%%::*}"
+    src="${src##*/}"
+    [[ $src = *.patch ]] || continue
+    echo "Applying patch $src..."
+    patch -Np1 < "../$src"
+  done
 }
 
 build() {
