--- a/libuv/PKGBUILD
+++ b/libuv/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Massimiliano Torromeo <massimiliano.torromeo@gmail.com>
 
 pkgname=libuv
-pkgver=1.41.0
+pkgver=1.42.0
 pkgrel=1
 pkgdesc="Multi-platform support library with a focus on asynchronous I/O"
 arch=(x86_64 powerpc64le powerpc)
@@ -12,37 +12,38 @@ license=('custom')
 depends=('glibc' 'libnsl')
 makedepends=('python-sphinx')
 source=(https://dist.libuv.org/dist/v$pkgver/libuv-v$pkgver.tar.gz{,.sign})
-sha512sums=('33613fa28e8136507300eba374351774849b6b39aab4e53c997a918d3bc1d1094c6123e0e509535095b14dc5daa885eadb1a67bed46622ad3cc79d62dc817e84'
+sha512sums=('cc8ca797ec6e02fff7d4998fd5a509373ae6c674ff0d57960fef3418f59d3b93a655f52913ee5f712e32e3980b29df6315685c8b506790295d97c7c1f94f3425'
             'SKIP')
 # PGP key IDs are available from https://github.com/libuv/libuv/blob/v1.x/MAINTAINERS.md
-validpgpkeys=('57353E0DBDAAA7E839B66A1AFF47D5E4AD8B4FDC')  # keybase.io/cjihrig
+validpgpkeys=('57353E0DBDAAA7E839B66A1AFF47D5E4AD8B4FDC'  # Colin Ihrig (@cjihrig)
+              'AEAD0A4B686767751A0E4AEF34A25FB128246514') # Jameson Nash (@vtjnash)
 
 build() {
-	cd $pkgname-v$pkgver
-	./autogen.sh
-	./configure --prefix=/usr
-	make
-	make man -C docs
+    cd $pkgname-v$pkgver
+    ./autogen.sh
+    ./configure --prefix=/usr
+    make
+    make man -C docs
 }
 
 check() {
-	cd $pkgname-v$pkgver
-	make check
+    cd $pkgname-v$pkgver
+    make check
 }
 
 package() {
-	cd $pkgname-v$pkgver
+    cd $pkgname-v$pkgver
 
-	make DESTDIR="$pkgdir" install
+    make DESTDIR="$pkgdir" install
 
-	install -Dm644 LICENSE \
-		"$pkgdir"/usr/share/licenses/$pkgname/LICENSE
-	install -Dm644 AUTHORS \
-		"$pkgdir"/usr/share/doc/$pkgname/AUTHORS
-	install -Dm644 README.md \
-		"$pkgdir"/usr/share/doc/$pkgname/README.md
-	install -Dm644 ChangeLog \
-		"$pkgdir"/usr/share/doc/$pkgname/ChangeLog
-	install -Dm644 docs/build/man/libuv.1 \
-		"$pkgdir"/usr/share/man/man1/libuv.1
+    install -Dm644 LICENSE \
+        "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
+    install -Dm644 AUTHORS \
+        "$pkgdir"/usr/share/doc/$pkgname/AUTHORS
+    install -Dm644 README.md \
+        "$pkgdir"/usr/share/doc/$pkgname/README.md
+    install -Dm644 ChangeLog \
+        "$pkgdir"/usr/share/doc/$pkgname/ChangeLog
+    install -Dm644 docs/build/man/libuv.1 \
+        "$pkgdir"/usr/share/man/man1/libuv.1
 }
