* update fmt to 8.0.1-1

--- a/fmt/PKGBUILD
+++ b/fmt/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Mihai Bişog <mihai.bisog@gmail.com>
 
 pkgname=fmt
-pkgver=7.1.3
+pkgver=8.0.1
 pkgrel=1
 pkgdesc='Open-source formatting library for C++'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url=https://fmt.dev
 license=(BSD)
 depends=(gcc-libs)
@@ -15,24 +15,30 @@ makedepends=(
   doxygen
   git
   ninja
-  npm
   python-pip
   python-virtualenv
 )
+makedepends_powerpc=(nodejs-lts-dubnium)
+makedepends_powerpc64le=(nodejs)
+makedepends_x86_64=(npm)
 provides=(libfmt.so)
-_tag=7bdf0628b1276379886c7f6dda2cef2b3b374f0b
-source=(git+https://github.com/fmtlib/fmt.git#tag=${_tag})
-b2sums=(SKIP)
+_commit=d141cdbeb0fb422a3fb7173b285fd38e0d1772dc
+source=(git+https://github.com/fmtlib/fmt.git#commit=${_commit})
+b2sums=('SKIP')
+
+prepare() {
+  pushd fmt
+  # https://github.com/fmtlib/fmt/pull/2376
+  git cherry-pick -n c9a10631cb3a656b0a0a3ba3cf0ef7ea541df30f
+  popd
+
+  npm install less less-plugin-clean-css
+  sed "s/'lessc',/'npx', 'lessc',/" -i fmt/doc/build.py
+}
 
 pkgver() {
   cd fmt
-
   git describe --tags
-}
-
-prepare() {
-  npm install less less-plugin-clean-css
-  sed "s/'lessc',/'npx', 'lessc',/" -i fmt/doc/build.py
 }
 
 build() {
