--- a/libcerf/PKGBUILD
+++ b/libcerf/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=libcerf
 epoch=1
-pkgver=1.15
+pkgver=1.17
 pkgrel=1
 pkgdesc='Self-contained numeric library that provides an efficient and accurate implementation of complex error functions'
 arch=(x86_64 powerpc64le powerpc)
@@ -11,14 +11,8 @@ url='https://jugit.fz-juelich.de/mlz/libcerf/'
 license=(custom)
 depends=(glibc)
 makedepends=(cmake)
-source=(https://jugit.fz-juelich.de/mlz/libcerf/-/archive/v$pkgver/libcerf-v$pkgver.tar.gz
-        pc-install-dir.patch)
-sha256sums=('a5d45475e08d431267fd29d6af987a9dd9b6792578ec3feb466d4d21f2844868'
-            '7605dfbe028efc37ad63eac35c70260283908c21c51030283576d0439d8b82f7')
-
-prepare() {
-  patch -d $pkgname-v$pkgver -p1 < pc-install-dir.patch # Fix pc file install dir
-}
+source=(https://jugit.fz-juelich.de/mlz/libcerf/-/archive/v$pkgver/libcerf-v$pkgver.tar.gz)
+sha256sums=('b1916b292cb37f2d0d0b699fbcf0fe260cca97ec7266ea20ff0c5cd8ef2eaab4')
 
 build() {
   cmake -B build -S $pkgname-v$pkgver \
