--- a/python/autopep8/PKGBUILD
+++ b/python/autopep8/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=autopep8
 pkgver=1.5.7
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc="A tool that automatically formats Python code to conform to the PEP 8 style guide"
 arch=('any')
@@ -17,6 +17,7 @@ sha512sums=('997cf823e0313013d9ba2ee6df568ed41786d4b7d1baada3099fdc11c3698d54328
 
 build() {
   cd autopep8-$pkgver
+  export PYTHONHASHSEED=0
   python setup.py build
 }
 
