--- a/python/flake8/PKGBUILD
+++ b/python/flake8/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=flake8
 pkgver=3.9.2
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc="The modular source code checker: pep8, pyflakes and co"
 arch=('any')
@@ -26,6 +26,7 @@ prepare() {
 
 build() {
   cd flake8-$pkgver
+  export PYTHONHASHSEED=0
   python setup.py build
 }
 
