--- a/python/python-fonttools/PKGBUILD
+++ b/python/python-fonttools/PKGBUILD
@@ -1,39 +1,42 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Andrzej Giniewicz <gginiu@gmail.com>
+# Maintainer: Caleb Maclennan <caleb@alerque.com>
 # Contributor: Firmicus <firmicus āt gmx dōt net>
 # Contributor: flying sheep <flying-sheep@web.de>
 
 pkgname=python-fonttools
-pkgver=4.25.0
-pkgrel=1
-pkgdesc="A library to manipulate font files from Python"
-url="https://github.com/fonttools/fonttools"
-license=("MIT")
+pkgver=4.25.1
+pkgrel=2
+pkgdesc='A library to manipulate font files from Python'
+url='https://github.com/fonttools/fonttools'
+license=('MIT')
 arch=(x86_64 powerpc64le powerpc)
-depends=("python")
-makedepends=("cython" "python-setuptools")
-optdepends=("python-lxml: faster backend for XML files reading/writing"
-	    "python-fs: to read/write UFO source files, "
-	    "python-brotli: to compress/decompress WOFF 2.0 web fonts"
-	    "python-zopfli: faster backend fom WOFF 1.0 web fonts compression"
-	    "python-scipy: for finding wrong contour/component order between different masters"
-	    "python-matplotlib: for visualizing DesignSpaceDocument and resulting VariationModel"
-	    "python-unicodedata2: for displaying the Unicode character names when dumping the cmap table with ttx"
-	    "python-sympy: for symbolic font statistics analysis"
-	    "python-pyqt5: for drawing glyphs with Qt's QPainterPath"
-	    "python-reportlab: to drawing glyphs as PNG images"
-            "python-lz4: for graphite type tables in ttLib/tables")
-source=("https://github.com/fonttools/fonttools/archive/${pkgver}/fonttools-${pkgver}.zip")
-sha512sums=('49b37cadada97019d1b3fd9dcde113d57f54543c834529919f4bd37b532c84d2f796c41203a79ff71b146e4a1e935f0a3dd06b90e898033013cb18a86eb9c258')
+depends=('python')
+makedepends=('cython'
+             'python-setuptools')
+optdepends=('python-brotli: to compress/decompress WOFF 2.0 web fonts'
+            'python-fs: to read/write UFO source files'
+            'python-lxml: faster backend for XML files reading/writing'
+            'python-lz4: for graphite type tables in ttLib/tables'
+            'python-matplotlib: for visualizing DesignSpaceDocument and resulting VariationModel'
+            'python-pyqt5: for drawing glyphs with Qt’s QPainterPath'
+            'python-reportlab: to drawing glyphs as PNG images'
+            'python-scipy: for finding wrong contour/component order between different masters'
+            'python-sympy: for symbolic font statistics analysis'
+            'python-unicodedata2: for displaying the Unicode character names when dumping the cmap table with ttx'
+            'python-zopfli: faster backend fom WOFF 1.0 web fonts compression')
+source=("https://github.com/fonttools/fonttools/archive/$pkgver/fonttools-$pkgver.zip")
+sha512sums=('1192ff67948e9579cc22062f3b7c98cbf4e3c6dba1c0924440de0247d6ea5f5aabbeaccb3ce96487453778119562e16847f596093fb304eb7cd530177c39a1f5')
 
 build() {
-  cd "$srcdir"/fonttools-${pkgver}
-  python setup.py build_ext --inplace
-  python setup.py build
+	cd "fonttools-$pkgver"
+	export PYTHONHASHSEED=0
+	python setup.py build_ext --inplace
+	python setup.py build
 }
 
 package() {
-  cd "$srcdir"/fonttools-${pkgver}
-  python setup.py install --skip-build --root="$pkgdir" --optimize=1
-  install -D -m755 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
+	cd "fonttools-$pkgver"
+	python setup.py install --root="$pkgdir" --optimize=1 --skip-build
+	install -Dm0755 -t "$pkgdir/usr/share/licenses/$pkgname/" LICENSE
 }
