--- a/python/python-pytest-runner/PKGBUILD
+++ b/python/python-pytest-runner/PKGBUILD
@@ -1,32 +1,25 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
-pkgbase=python-pytest-runner
-pkgname=('python-pytest-runner' 'python2-pytest-runner')
-pkgver=5.2
-pkgrel=3
+pkgname=python-pytest-runner
+pkgver=5.3.0
+pkgrel=1
 pkgdesc="Invoke py.test as distutils command with dependency resolution"
 arch=('any')
 license=('MIT')
 url="https://github.com/pytest-dev/pytest-runner"
-makedepends=('python-pytest' 'python2-pytest' 'python-setuptools-scm' 'python2-setuptools-scm')
+depends=('python-pytest' 'python-setuptools')
+makedepends=('python-setuptools-scm' 'python-toml')
 checkdepends=('python-pytest-black' 'python-pytest-cov' 'python-pytest-virtualenv'
-              'python-pytest-flake8')
-source=("$pkgbase-$pkgver.tar.gz::https://github.com/pytest-dev/pytest-runner/archive/$pkgver.tar.gz")
-sha512sums=('0ce9c191481ab97795d0f45bdea7669cb61c3ac6aac476954d34c3e09e6fb08fd6bf73f192c014cb7ff2bd90dbfeb0f01d9a9ba7a9c6caeb371e40b42b558d63')
+              'python-pytest-flake8' 'python-pytest-enabler')
+source=("https://github.com/pytest-dev/pytest-runner/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
+sha512sums=('db62e26e58664c74bc3c1fa02c36e138f8a7b4aa617afa6abb13e394e1a216cc76b3b1303c256c43e1b364299ea7e9ca640ba7e0a2b0057734a93337dbcb815e')
 
-prepare() {
-  cp -a pytest-runner-$pkgver{,-py2}
-
-  export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
-}
+export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
 
 build() {
-  cd "$srcdir"/pytest-runner-$pkgver
+  cd pytest-runner-$pkgver
   python setup.py build
-
-  cd "$srcdir"/pytest-runner-$pkgver-py2
-  python2 setup.py build
 }
 
 check() {
@@ -35,18 +28,8 @@ check() {
   PYTHONPATH="$PWD" pytest
 }
 
-package_python-pytest-runner() {
-  depends=('python-pytest')
-
+package() {
   cd pytest-runner-$pkgver
   python setup.py install --root="$pkgdir" --optimize=1
-  install -Dm644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
-}
-
-package_python2-pytest-runner() {
-  depends=('python2-pytest')
-
-  cd pytest-runner-$pkgver-py2
-  python2 setup.py install --root="$pkgdir" --optimize=1
-  install -Dm644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
+  install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
 }
