--- a/mbedtls/PKGBUILD
+++ b/mbedtls/PKGBUILD
@@ -4,35 +4,27 @@
 # Contributor: carstene1ns <arch carsten-teibes.de>
 
 pkgname=mbedtls
-pkgver=2.25.0
+pkgver=2.27.0
 pkgrel=1
 pkgdesc="Portable cryptographic and SSL/TLS library, aka polarssl"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://tls.mbed.org"
 license=('Apache')
 depends=('glibc' 'sh')
-checkdepends=('python')
-makedepends=('cmake')
+makedepends=('cmake' 'python')
 provides=('polarssl' 'libmbedcrypto.so' 'libmbedtls.so' 'libmbedx509.so')
 replaces=('polarssl')
 conflicts=('polarssl')
 options=('staticlibs')
 source=(https://github.com/ARMmbed/mbedtls/archive/${pkgname}-${pkgver}.tar.gz)
-sha256sums=('ea2049c2dd4868693998d5a9780e198194be5aea1706ff4a9d4f882f18c0a101')
-b2sums=('27a326ba08c341ed47ce280401a4b73606138aa8946fd8d8df5d084496eecc6eadf4eedd65270725a360d4b171c86cefeccb6b1515847587f0f11ed15b7dda9b')
+sha256sums=('4f6a43f06ded62aa20ef582436a39b65902e1126cbbe2fb17f394e9e9a552767')
+b2sums=('31840e5a518643495f319cac8e0c876bdca5dbdee6524d30cace3538d5fb5ba7847dd653f61f775f5c3c384ac0533afdbf6172b3e523db515eceecc29fadd2da')
 
 prepare() {
   cd "$pkgname-$pkgname-$pkgver"
   # enable flags for non-embedded systems
   sed -i 's|//\(#define MBEDTLS_THREADING_C\)|\1|' include/mbedtls/config.h
   sed -i 's|//\(#define MBEDTLS_THREADING_PTHREAD\)|\1|' include/mbedtls/config.h
-
-  # broken in 2.25.0
-  sed -i 's/thread_id, -ret/thread_id, (unsigned int)(-ret)/' programs/ssl/ssl_pthread_server.c
-  sed -i 's/thread_id, ret/thread_id, (unsigned int)ret/' programs/ssl/ssl_pthread_server.c
-  sed -i 's/ -ret );/ (unsigned int)(-ret) );/' programs/ssl/ssl_pthread_server.c
-  sed -i 's/ -ret, error_buf/ (unsigned int)(-ret), error_buf/' programs/ssl/ssl_pthread_server.c
-  sed -i 's/04x\\n", ret /04x\\n", (unsigned int)ret /' programs/ssl/ssl_pthread_server.c
 }
 
 build() {
@@ -41,9 +33,10 @@ build() {
     -B build \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
+    -DMBEDTLS_FATAL_WARNINGS=OFF \
     -DCMAKE_VERBOSE_MAKEFILE=ON \
     -DUSE_SHARED_MBEDTLS_LIBRARY=ON \
-	-DCMAKE_INSTALL_RPATH=
+    -DCMAKE_INSTALL_RPATH=
   make -C build
 }
 
