--- a/nftables/PKGBUILD
+++ b/nftables/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=nftables
 epoch=1
 pkgver=0.9.9
-pkgrel=1
+pkgrel=4
 pkgdesc='Netfilter tables userspace tools'
 arch=(x86_64 powerpc64le powerpc)
 url='https://netfilter.org/projects/nftables/'
@@ -17,10 +17,11 @@ validpgpkeys=('37D964ACC04981C75500FB9BD55D978A8A1420E4') # Netfilter Core Team
 source=("https://netfilter.org/projects/nftables/files/nftables-$pkgver.tar.bz2"{,.sig}
         'nftables.conf'
         'nftables.service')
+install=nftables.install
 sha256sums=('76ef2dc7fd0d79031a8369487739a217ca83996b3a746cec5bda79da11e3f1b4'
             'SKIP'
-            '7b00611bb0533ca2f4abce14e22e9de39c344e241d4eae884c5e594d1b1ce8df'
-            '3c6a34a400022450df0b6e97b3f16eea5cab7741a0e5f16858b46a3e6591b5af')
+            'c66fd3b4ee14e577d077d346ba548090040bb8b1cb26c65235814c51aad40e98'
+            'deffeef36fe658867dd9203ec13dec85047a6d224ea63334dcf60db97e1809ea')
 
 prepare() {
   cd $pkgname-$pkgver
