* update linux-ppc64 to 5.13.7.arch1-1

--- a/linux-ppc64/PKGBUILD
+++ b/linux-ppc64/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgbase=linux-ppc64
-pkgver=5.13.1.arch1
+pkgver=5.13.7.arch1
 pkgrel=1
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
@@ -23,9 +23,10 @@ validpgpkeys=(
   'ABAF11C65A2970B130ABE3C479BE3E4300411886'  # Linus Torvalds
   '647F28654894E3BD457199BE38DBBDC86092693E'  # Greg Kroah-Hartman
   'A2FF3A36AAA56654109064AB19802F8B0D70FC30'  # Jan Alexander Steffens (heftig)
+  'C7E7849466FE2358343588377258734B41C31549'  # David Runge <dvzrv@archlinux.org>
 )
 sha256sums=('SKIP'
-            'd482170f999a93080ffe7b12dc4c437317241ef579c79abff89ae2c20e6dd1b1')
+            '19c1df191f524e0ec09157423b31d751848979656ccad3e1fa2abd0e2fdb9def')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
