* update argyllcms to 2.2.0-1

--- a/argyllcms/PKGBUILD
+++ b/argyllcms/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=argyllcms
 _pkgname=Argyll
-pkgver=2.1.2
+pkgver=2.2.0
 _pkgver="V${pkgver}"
 pkgrel=1
 pkgdesc="An ICC compatible color management system with support for different colorimeter hardware"
@@ -15,15 +15,12 @@ license=(GPL AGPL)
 depends=(libpng libtiff libxss libxinerama libxxf86vm libxrandr zlib openssl)
 makedepends=(ftjam zip unzip)
 source=("https://www.argyllcms.com/${_pkgname}_${_pkgver}_src.zip")
-sha256sums=('be378ca836b17b8684db05e9feaab138d711835ef00a04a76ac0ceacd386a3e3')
+sha256sums=('c612a2e49fd51e089616cd27b6d4717d0f20fc8edbd906462f0d0dbbabbc711c')
 
 prepare() {
     cd ${_pkgname}_${_pkgver}
     # Use hwdb builtin, instead of the obsolete usb-db in the udev rules.
     sed -i 's:^TEST=="/lib/udev/usb-db", IMPORT{program}="usb-db %p":IMPORT{builtin}="hwdb --subsystem=usb":' usb/55-Argyll.rules
-
-    # Use CFLAGS
-    echo "CCOPTFLAG += ${CFLAGS} -fcommon ;" >> Jamtop
 
     # Use LDFLAGS
     echo "LINKFLAGS += ${LDFLAGS} ;" >> Jamtop
@@ -31,7 +28,7 @@ prepare() {
 
 build() {
     cd ${_pkgname}_${_pkgver}
-    CCOPTFLAG="$CFLAGS -fcommon"
+    CCOPTFLAG="$CFLAGS"
     jam -q -fJambase ${MAKEFLAGS} -sPREFIX=/usr -sDESTDIR="${pkgdir}" -sREFSUBDIR=share/argyllcms/ref all
 }
 
