* update mariadb to 10.6.3-1

--- a/mariadb/PKGBUILD
+++ b/mariadb/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=mariadb
 pkgname=('mariadb-libs' 'mariadb-clients' 'mariadb' 'mytop')
 pkgdesc='Fast SQL database server, derived from MySQL'
-pkgver=10.5.11
+pkgver=10.6.3
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
 license=('GPL')
@@ -13,7 +13,6 @@ url='https://mariadb.org/'
 makedepends=('boost' 'bzip2' 'cmake' 'jemalloc' 'libaio' 'libxcrypt'
              'libxml2' 'lz4' 'lzo' 'openssl' 'systemd' 'zlib' 'zstd' 'curl'
              'krb5' 'cracklib')
-makedepends_powerpc=('libatomic_ops')
 validpgpkeys=('199369E5404BD5FC7D2FE43BCBCB082A1BB943DB') # MariaDB Package Signing Key <package-signing-key@mariadb.org>
 # The default links with mirror redirection fail for signatures, specific
 # mirrors may be out of date every now and then. Let's use the upstream
@@ -21,8 +20,8 @@ validpgpkeys=('199369E5404BD5FC7D2FE43BCBCB082A1BB943DB') # MariaDB Package Sign
 # https://mariadb.com/kb/en/library/mirror-sites-for-mariadb/
 source=("https://rsync.osuosl.org/pub/mariadb/mariadb-${pkgver}/source/mariadb-${pkgver}.tar.gz"{,.asc}
         '0001-arch-specific.patch'
-        'atomic-fix.patch')
-sha256sums=('761053605fe30ce393f324852117990350840a93b3e6305ef4d2f8c8305cc47a'
+	'atomic-fix.patch')
+sha256sums=('5bc125606af5ec1fda80f594c1ddfacef8b305c158ecf8b1ca7a3f01cd0b18db'
             'SKIP'
             '3289efb3452d199aec872115f35da3f1d6fd4ce774615076690e9bc8afae1460'
             '4aa201a6c92ec377a10bc27fc6351f815d0de24416cbad878123d25f783c92d6')
@@ -93,8 +92,6 @@ build() {
     -DWITH_ZLIB=system
   )
 
-  [ "${CARCH}" == 'powerpc' ] && LDFLAGS+=' -latomic_ops'
-
   mkdir build
   cd build
 
@@ -113,7 +110,6 @@ check() {
 package_mariadb-libs() {
   pkgdesc='MariaDB libraries'
   depends=('bzip2' 'libaio' 'libxcrypt' 'libcrypt.so' 'lz4' 'lzo' 'openssl' 'xz' 'zlib')
-  depends_powerpc=('libatomic_ops')
   optdepends=('krb5: for gssapi authentication')
   conflicts=('libmysqlclient' 'libmariadbclient' 'mariadb-connector-c')
   provides=('libmariadbclient' 'mariadb-connector-c' 'libmariadb.so' 'libmariadbd.so')
@@ -136,6 +132,9 @@ package_mariadb-libs() {
 
   # remove static libraries
   rm usr/lib/*.a
+
+  # remove man pages
+  rm -r usr/share/man
 }
 
 package_mariadb-clients() {
@@ -191,7 +190,6 @@ package_mariadb() {
   mv usr/share/doc/mariadb/COPYING* usr/share/licenses/mariadb/
 
   # move it where one might look for it
-  # on Arch POWER we don't yet really care
   #mv usr/share/{groonga{,-normalizer-mysql},doc/mariadb/}
 
   # move to pam directories
