--- a/man-db/PKGBUILD
+++ b/man-db/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=man-db
 pkgver=2.9.4
-pkgrel=1
+pkgrel=2
 pkgdesc="A utility for reading man pages"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.nongnu.org/man-db/"
@@ -48,7 +48,7 @@ build() {
     --disable-setuid \
     --enable-cache-owner=root \
     --enable-mandirs=GNU \
-    --with-sections="1 n l 8 3 0 2 5 4 9 6 7"
+    --with-sections="1 1p n l 8 3 3p 0 0p 2 5 4 9 6 7"
   make
 }
 
