* update f2fs-tools to 1.14.0-2

--- a/f2fs-tools/PKGBUILD
+++ b/f2fs-tools/PKGBUILD
@@ -5,9 +5,9 @@
 pkgname=f2fs-tools
 _tag='d41dcbdf46dc3841cd0a0507e6573e38cb6c55bb' # git rev-parse v${pkgver}
 pkgver=1.14.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Tools for Flash-Friendly File System (F2FS)'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc)
 url='https://git.kernel.org/pub/scm/linux/kernel/git/jaegeuk/f2fs-tools.git/about/'
 provides=('libf2fs.so' 'bf2fs_format.so')
 depends=('util-linux')
@@ -19,9 +19,6 @@ sha256sums=('SKIP')
 
 prepare() {
 	cd "${pkgname}"
-
-	# /usr/bin/sg_write_buffer is provided in sg3_utils
-	sed -i '/sg_write_buffer/d' tools/Makefile.am
 
 	autoreconf -fi
 }
@@ -39,4 +36,7 @@ package() {
 	cd "${pkgname}"
 
 	make DESTDIR="${pkgdir}/" sbindir=/usr/bin install
+
+	# /usr/bin/sg_write_buffer is provided in sg3_utils
+	rm "${pkgdir}"/usr/bin/sg_write_buffer
 }
