--- a/qt5-base/PKGBUILD
+++ b/qt5-base/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgbase=qt5-base
 pkgname=(qt5-base qt5-xcb-private-headers)
-pkgver=5.15.2+kde+r203
+pkgver=5.15.2+kde+r210
 pkgrel=1
-_commit=d23de39db3b84c8c9a80da36d8d0de8da4321566
+_commit=663d240a18f5acac82fd2bd0fd4a33c4f47b260a
 arch=(x86_64 powerpc64le powerpc)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
@@ -30,10 +30,12 @@ groups=('qt' 'qt5')
 _pkgfqn=qtbase
 source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit
         qt5-base-cflags.patch
-        qt5-base-nostrip.patch)
+        qt5-base-nostrip.patch
+        qt5-base-mariadb-10.6.patch)
 sha256sums=('SKIP'
             'cf707cd970650f8b60f8897692b36708ded9ba116723ec8fcd885576783fe85c'
-            '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094')
+            '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094'
+            'dde1c2c7300a6e05b12145f0c0b180991aa5929a4bf13c026eef6511593f357b')
 
 pkgver() {
   cd $_pkgfqn
@@ -46,6 +48,7 @@ prepare() {
   git revert -n 6344955d17e17e2398720fe60c34cfc2a4a95208 # Revert version bump
   patch -p1 < ../qt5-base-cflags.patch # Use system CFLAGS in qmake
   patch -p1 < ../qt5-base-nostrip.patch # Don't strip binaries with qmake
+  patch -p1 < ../qt5-base-mariadb-10.6.patch # Fix broken mysql version detection with mariadb 10.6
 }
 
 build() {
