--- a/graphviz/PKGBUILD
+++ b/graphviz/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: John Proctor <jproctor@prium.net>
 
 pkgname=graphviz
-pkgver=2.47.2
+pkgver=2.48.0
 pkgrel=1
 pkgdesc='Graph visualization software'
 url='https://www.graphviz.org/'
@@ -25,7 +25,7 @@ optdepends=('mono: sharp bindings'
             'xterm: vimdot')
 source=("https://gitlab.com/graphviz/graphviz/-/archive/$pkgver/$pkgname-$pkgver.tar.gz"
         'ghostscript918.patch')
-sha256sums=('0f55cc79326fc1ff37aacf1e26ac0cd0e8eb5656035a470c8fb8b103fb4d4af3'
+sha256sums=('85a2beca9a1a58da3ba7237a63aad2e612f7e3afa990591a9971d2077f1f5937'
             '0083d126e27f2223ec4226fc1d71c9c84106968a0fdf65de838aee1e4882bfdb')
 
 install=install
@@ -43,6 +43,7 @@ build() {
 
 	./configure --prefix=/usr \
            --enable-python3=yes --disable-python
+        sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool # Fix overlinking
 	make
 }
 
