--- a/syslog-ng/PKGBUILD
+++ b/syslog-ng/PKGBUILD
@@ -3,13 +3,13 @@
 # Contributor: Eric Bélanger <eric@archlinux.org>
 
 pkgname=syslog-ng
-pkgver=3.32.1
-pkgrel=3
+pkgver=3.33.2
+pkgrel=1
 pkgdesc="Next-generation syslogd with advanced networking and filtering capabilities"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.syslog-ng.com/products/open-source-log-management/"
 license=('GPL2' 'LGPL2.1')
-depends=('awk' 'systemd-libs' 'glib2' 'libnsl' 'json-c' 'curl' 'libnet')
+depends=('awk' 'systemd-libs' 'glib2' 'libnsl' 'json-c' 'curl' 'libnet' 'openssl')
 makedepends=('libxslt' 'mongo-c-driver' 'librabbitmq-c' 'python' 'libesmtp' 'hiredis'
              'libdbi' 'libmaxminddb' 'net-snmp' 'librdkafka' 'libcap' 'systemd')
 checkdepends=('python-nose' 'python-ply')
@@ -30,18 +30,15 @@ backup=('etc/syslog-ng/scl.conf'
         'etc/logrotate.d/syslog-ng'
         'etc/default/syslog-ng@default')
 source=(https://github.com/balabit/syslog-ng/releases/download/syslog-ng-$pkgver/$pkgname-$pkgver.tar.gz
-        syslog-ng.conf syslog-ng.logrotate
-        syslog-ng-libesmtp-1.1.patch::https://github.com/syslog-ng/syslog-ng/commit/b8284f8e.patch)
-sha512sums=('c5a72e4815c2791cb609cbb93993cbb2c52f3ac869e062984b6a359f11232f523c5db3555857f0fef0071764a677f1efdb2aa1f24b4abe7cea13590973d09280'
-            '29beb12baa60b959d7cbc105545a5334bcee200e49f2b5d12ce51139a7e916fe2afcd505a265ce402e7f88b8cbb42e98a6b06cff1b641368dd9ee459177bf9cc'
-            'cd39f545a6a855c866a466bf846e33940b2c2dd1fc2eaf50cce29c68e1a5753c7c4b56411e4f01c152f32e155104a98dd755a96319767f47c73a8853f720b2cc'
-            'a70e5e2535b16aee2bbb51c1278d6c7c2dd709ce84f3234539543d958559c4972a2053c6781ca8fd391bb9c239c847aba336c8da892724e63c2ab2fbd5063d78')
+        syslog-ng.conf syslog-ng.logrotate)
+sha512sums=('c20b8ef9dff2682562975b4149484f1abc4249aacbb5aac6a3fc683d102ccd316c048e166d61e51da6848ff0f8f5c6245dc5a307929f1cdef3ba718244e60f71'
+            'ef7611fd0e73d6e6f16691393810889a327ba51fc55b0458119b5d88356a0599fed87d9cccd6708886bdabdf1af78f1e1c590ddb1a3959224a3595daec2e1613'
+            'cd39f545a6a855c866a466bf846e33940b2c2dd1fc2eaf50cce29c68e1a5753c7c4b56411e4f01c152f32e155104a98dd755a96319767f47c73a8853f720b2cc')
 
 prepare() {
   cd $pkgname-$pkgver
   sed -i -e 's,/bin/,/usr/bin/,' -e 's,/sbin/,/bin/,' contrib/systemd/syslog-ng@.service
   sed -i -e 's|/var/run|/run|g' contrib/systemd/syslog-ng@default
-  patch -p1 < ../syslog-ng-libesmtp-1.1.patch # Add pkgconfig based detection for libesmtp 1.1
 }
 
 build() {
@@ -52,8 +49,7 @@ build() {
     --with-pidfile-dir=/run --enable-spoof-source --enable-ipv6 \
     --enable-systemd --with-systemdsystemunitdir=/usr/lib/systemd/system \
     --enable-manpages --enable-all-modules --disable-java --disable-java-modules  \
-    --disable-riemann --with-python=3 --with-jsonc=system
-  sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool # Fix overlinking
+    --disable-mqtt --disable-riemann --with-python=3 --with-jsonc=system
   make
 }
 
