* update netcdf-fortran to 4.5.3-2

--- a/netcdf-fortran/PKGBUILD
+++ b/netcdf-fortran/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=netcdf-fortran
 pkgver=4.5.3
-pkgrel=1
+pkgrel=2
 pkgdesc="NetCDF fortran bindings"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/Unidata/netcdf-fortran"
 license=(custom)
 depends=(gcc-libs netcdf curl)
