--- a/poppler/PKGBUILD
+++ b/poppler/PKGBUILD
@@ -3,23 +3,20 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgbase=poppler
-pkgname=('poppler' 'poppler-glib' 'poppler-qt5')
-[ "${CARCH}" != 'powerpc' ] && pkgname+=('poppler-qt6')
-pkgver=21.06.1
-pkgrel=1
+pkgname=('poppler' 'poppler-glib' 'poppler-qt5' 'poppler-qt6')
+pkgver=21.07.0
+pkgrel=2
 arch=(x86_64 powerpc64le powerpc)
 license=('GPL')
 makedepends=('libjpeg' 'gcc-libs' 'cairo' 'fontconfig' 'openjpeg2' 'gtk3' 'pkgconfig' 'lcms2' 
              'gobject-introspection' 'icu' 'qt5-base' 'git' 'nss' 'gtk-doc' 'curl' 'poppler-data'
-             'cmake' 'python' 'boost')
-makedepends_powerpc64le=('qt6-base')
-makedepends_x86_64=('qt6-base')
+	     'cmake' 'python' 'boost' 'qt6-base')
 options=('!emptydirs')
 url="https://poppler.freedesktop.org/"
 # https://gitlab.freedesktop.org/poppler/poppler
 source=(https://poppler.freedesktop.org/${pkgbase}-${pkgver}.tar.xz{,.sig}
         test::git+https://anongit.freedesktop.org/git/poppler/test/#commit=03a4b9eb854a06a83c465e82de601796c458bbe9)
-sha256sums=('86b09e5a02de40081a3916ef8711c5128eaf4b1fc59d5f87d0ec66f04f595db4'
+sha256sums=('e26ab29f68065de4d6562f0a3e2b5435a83ca92be573b99a1c81998fa286a4d4'
             'SKIP'
             'SKIP')
 validpgpkeys=('CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7') # "Albert Astals Cid <aacid@kde.org>"
@@ -40,7 +37,7 @@ build() {
 }
 
 check() {
-  [ "${CARCH}" == 'powerpc' ] && return 0
+  #[ "${CARCH}" == 'powerpc' ] && return 0
   cd build
   LANG=en_US.UTF8 make test
 }
