* update vtk to 8.2.0-21

--- a/vtk/PKGBUILD
+++ b/vtk/PKGBUILD
@@ -7,7 +7,7 @@
 
 pkgname=vtk
 pkgver=8.2.0
-pkgrel=19
+pkgrel=21
 pkgdesc="A software system for 3D computer graphics, image processing, and visualization"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.vtk.org/"
@@ -75,6 +75,9 @@ prepare() {
 
   # Fix build with FreeType 2.10.3
   patch -p1 -i ../vtk-freetype-2.10.3.patch
+
+  # Fix build with HDF5 1.12.1
+  sed -i 's/typedef int hid_t;/typedef int64_t hid_t;/' ThirdParty/xdmf3/vtkxdmf3/core/XdmfHDF5Controller.hpp
 }
 
 build() {
