--- a/go/runc/PKGBUILD
+++ b/go/runc/PKGBUILD
@@ -1,19 +1,22 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Morten Linderud <foxboron@archlinux.org>
+# Maintainer: Frederik Schwan <freswa at archlinux dot org>
 # Contributor: Sébastien "Seblu" Luttringer
 
 pkgname=runc
-pkgver=1.0.0rc95
-pkgrel=1
+pkgver=1.0.1
+pkgrel=2
 pkgdesc='CLI tool for managing OCI compliant containers'
 arch=(x86_64 powerpc64le)
 url='https://runc.io/'
 license=(Apache)
 depends=(libseccomp)
 makedepends=(git go go-md2man)
-_commit=b9ee9c6314599f1b4a7f497e1f1f856fe433d3b7    #refs/tags/v1.0.0-rc95^{}
+opdepends=(
+  'criu: checkpoint support'
+)
+_commit=4144b63817ebcc5b358fc2c8ef95f7cddd709aa7	#refs/tags/v1.0.0^{}
 source=("git+https://github.com/opencontainers/runc.git#commit=$_commit?signed")
-# source=("git+https://github.com/opencontainers/runc.git#tag=v1.0.0-rc92?signed")
 validpgpkeys=("5F36C6C61B5460124A75F5A69E18AA267DDB8DB4"
 			  "C9C370B246B09F6DBCFC744C34401015D1D2D386")
 sha256sums=('SKIP')
