* update jack2 to 1.9.19-1

--- a/jack2/PKGBUILD
+++ b/jack2/PKGBUILD
@@ -8,7 +8,7 @@
 pkgbase=jack2
 pkgname=('jack2' 'jack2-dbus')
 pkgdesc="The JACK low-latency audio server"
-pkgver=1.9.18
+pkgver=1.9.19
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/jackaudio/jack2"
@@ -36,6 +36,7 @@ prepare() {
 
 build() {
   cd "${pkgbase}"
+  export LINKFLAGS="$LDFLAGS"
   export PYTHONPATH="${PWD}:${PYTHONPATH}"
   waf configure --prefix=/usr \
                 --htmldir="/usr/share/doc/${pkgbase}/" \
@@ -74,8 +75,8 @@ package_jack2-dbus() {
   'wait' 'zombie')
 
   pkgdesc+=" (dbus integration)"
-  depends=('gcc-libs' 'glibc' 'jack2' 'libdbus-1.so' 'libexpat.so'
-  'libjackserver.so' 'python-dbus')
+  depends=('gcc-libs' 'glibc' 'jack2' 'libdbus-1.so' 'libjackserver.so'
+  'python-dbus')
 
   cd "${pkgbase}"
   export PYTHONPATH="${PWD}:${PYTHONPATH}"
