--- a/firejail/PKGBUILD
+++ b/firejail/PKGBUILD
@@ -1,11 +1,12 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Sergej Pupykin <arch+pub@sergej.pp.ru>
 # Maintainer: ajs124 < aur AT ajs124 DOT de >
 
 pkgname=firejail
-pkgver=0.9.64.4
+pkgver=0.9.66
 pkgrel=1
 pkgdesc="Linux namespaces sandbox program"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 license=(GPL2)
 url="https://github.com/netblue30/firejail"
 backup=('etc/firejail/login.users'
@@ -15,7 +16,7 @@ depends=('apparmor')
 validpgpkeys=('F951164995F5C4006A73411E2CCB36ADFC5849A7')
 install=firejail.install
 source=(https://github.com/netblue30/firejail/releases/download/${pkgver}/firejail-${pkgver}.tar.xz{,.asc})
-sha256sums=('2bdaf71fff00d7551b6a4f584f3f7152821b6f9b9d416ee098f4aeaf3a02dff1'
+sha256sums=('8a849ea2f3922901033a407b9498d48915260e7c3381f6cf151c51a73c952d0f'
             'SKIP')
 
 build() {
