--- a/firewalld/PKGBUILD
+++ b/firewalld/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: speed145a <jonathan@tagchapter.com>
 
 pkgname=firewalld
-pkgver=0.9.3
-pkgrel=3
+pkgver=1.0.0
+pkgrel=2
 pkgdesc='Firewall daemon with D-Bus interface'
 arch=(any)
 url=https://firewalld.org/
@@ -15,20 +15,18 @@ depends=(
   glib2
   hicolor-icon-theme
   nftables
-  python-decorator
   python-gobject
-  python-slip
 )
 makedepends=(
   docbook-xsl
   git
   intltool
-  ipset
 )
+makedepends_powerpc64le=(podman)
+makedepends_x86_64=(podman)
 optdepends=(
   'bash-completion: bash completion'
   'gtk3: firewall-config'
-  'ipset: ipset support'
   'libnotify: firewall-applet'
   'nm-connection-editor: firewalld-applet'
   'python-pyqt5: firewall-applet'
@@ -37,7 +35,7 @@ backup=(
   etc/conf.d/firewalld
   etc/firewalld/firewalld.conf
 )
-_tag=053908d04737809d7778c5e0c94c5a66383df22c
+_tag=9fc588446d0aa91e02e78cd953b7422c720cd04a
 source=(
   git+https://github.com/firewalld/firewalld.git#tag=${_tag}
   firewalld-sysconfigdir.patch
