* update java11-openjdk to 11.0.12.u7-1

--- a/java/java11-openjdk/PKGBUILD
+++ b/java/java11-openjdk/PKGBUILD
@@ -22,7 +22,7 @@ _updatever=7
 pkgrel=1
 pkgver=${_majorver}.${_minorver}.${_securityver}.u${_updatever}
 _hg_tag=jdk-${_majorver}.${_minorver}.${_securityver}+${_updatever}
-arch=(x86_64 powerpc)
+arch=(x86_64 powerpc64le) #powerpc)
 url='https://openjdk.java.net/'
 license=('custom')
 makedepends=('cpio' 'unzip' 'zip' 'libelf' 'libcups' 'libx11'
