--- a/cdrtools/PKGBUILD
+++ b/cdrtools/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Lukas Jirkovsky <l.jirkovsky@gmail.com>
 pkgname=cdrtools
 pkgver=3.02a09
-pkgrel=4
+pkgrel=5
 pkgdesc="Original cdrtools supporting CD, DVD and BluRay burning"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="http://cdrecord.org/"
 license=('CDDL')
 depends=('acl' 'libcap')
@@ -25,7 +25,7 @@ build() {
   sed -i 's|INSDIR=.*|INSDIR=bin|' rscsi/Makefile
 
   export GMAKE_NOWARN=true
-  make INS_BASE=/usr INS_RBASE=/
+  make INS_BASE=/usr INS_RBASE=/ VERSION_OS="_ArchPOWER" LDOPTX="$LDFLAGS"
 }
 
 check() {
