--- a/k8s/minikube/PKGBUILD
+++ b/k8s/minikube/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Ivan Shapovalov <intelfx@intelfx.name>
 
 pkgname=minikube
-pkgver=1.21.0
-_minikube_commit=76d74191d82c47883dc7e1319ef7cebd3e00ee11
+pkgver=1.22.0
+_minikube_commit=a03fbcf166e6f74ef224d4a63be4277d017bb62e
 pkgrel=1
 pkgdesc="A tool that makes it easy to run Kubernetes locally"
 url="https://github.com/kubernetes/minikube"
@@ -29,6 +29,8 @@ prepare() {
   export GOPATH="$srcdir"
   cd "$GOPATH/src/k8s.io/minikube"
   sed -i '/^MINIKUBE_LDFLAGS/ s/$/ -linkmode=external/' Makefile
+
+  mkdir -p ${srcdir}/.tmp
 }
 
 build() {
@@ -39,6 +41,7 @@ build() {
   export CGO_CXXFLAGS="${CXXFLAGS}"
   export CGO_LDFLAGS="${LDFLAGS}"
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
+  export TMPDIR=${srcdir}/.tmp
   make
 }
 
