--- a/modemmanager/PKGBUILD
+++ b/modemmanager/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=modemmanager
 pkgname=(modemmanager libmm-glib)
-pkgver=1.16.6
+pkgver=1.16.8
 pkgrel=1
 pkgdesc="Mobile broadband modem management service"
 arch=(x86_64 powerpc64le powerpc)
@@ -13,8 +13,8 @@ license=(GPL2 LGPL2.1)
 depends=(systemd libgudev polkit ppp libqmi libmbim
          mobile-broadband-provider-info)
 makedepends=(gtk-doc gobject-introspection vala autoconf-archive git)
-checkdepends=(python-gobject dbus-python)
-_commit=a7b37461441f66ca1f54c1e83473dbd6e4191852  # tags/1.16.6
+checkdepends=(python-gobject python-dbus)
+_commit=cc616ed45ea8ec80492e2ae7b107589f59a3f9c1  # tags/1.16.8
 source=("git+https://gitlab.freedesktop.org/mobile-broadband/ModemManager.git#commit=$_commit")
 sha256sums=('SKIP')
 
