* update libfakekey to 0.3-2

--- a/kde/libfakekey/PKGBUILD
+++ b/kde/libfakekey/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libfakekey
 pkgver=0.3
 pkgrel=2
 pkgdesc='X virtual keyboard library.'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url='https://www.yoctoproject.org/tools-resources/projects/matchbox'
 license=('GPL')
 depends=('libxtst')
