--- a/pcre-static/PKGBUILD
+++ b/pcre-static/PKGBUILD
@@ -6,9 +6,9 @@
 
 pkgname=pcre-static
 pkgver=8.44
-pkgrel=4
+pkgrel=5
 pkgdesc="A library that implements Perl 5-style regular expressions"
-arch=(x86_64 powerpc64le)
+arch=(i686 x86_64 armv6h armv7h aarch64 powerpc64le powerpc)
 url="http://www.pcre.org/"
 license=('BSD')
 depends=('gcc-libs')
