* update qemu-user-static to 6.0.0-1

--- a/qemu-user-static/PKGBUILD
+++ b/qemu-user-static/PKGBUILD
@@ -4,23 +4,21 @@
 
 pkgname=qemu-user-static
 pkgdesc="Statically linked binaries of Qemu with user emulation. Useful for containers/chroot environment with binfmt."
-pkgver=5.1.0
+pkgver=6.0.0
 pkgrel=1
-arch=(x86_64 powerpc64le)
+arch=(x86_64 aarch64 powerpc64le)
 license=(GPL2 LGPL2.1)
 url="http://wiki.qemu.org/"
 depends=()
-makedepends=(python glib2-static pcre-static)
+makedepends=(python meson glib2-static pcre-static)
 source=(https://download.qemu.org/qemu-$pkgver.tar.xz{,.sig})
-sha512sums=('e213edb71d93d5167ddce7546220ecb7b52a7778586a4f476f65bd1e510c9cfc6d1876238a7b501d9cc3fd31cc2ae4b7fb9e753bc3f12cc17cd16dfce2a96ba3'
+sha512sums=('ee3ff00aebec4d8891d2ff6dabe4e667e510b2a4fe3f6190aa34673a91ea32dcd2db2e9bf94c2f1bf05aa79788f17cfbbedc6027c0988ea08a92587b79ee05e4'
             'SKIP')
 validpgpkeys=('CEACC9E15534EBABB82D3FA03353C9CEF108B584')
 
 case $CARCH in
   i?86) _corearch=i386 ;;
   x86_64) _corearch=x86_64 ;;
-  powerpc) _corearch=ppc ;;
-  powerpc64le) _corearch=ppc64 ;;
 esac
 
 # If non empty, always run the configure script
