--- a/qemu-user-static/PKGBUILD
+++ b/qemu-user-static/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=qemu-user-static
 pkgdesc="Statically linked binaries of Qemu with user emulation. Useful for containers/chroot environment with binfmt."
 pkgver=6.0.0
 pkgrel=1
-arch=(x86_64 aarch64 powerpc64le)
+arch=(x86_64 aarch64 powerpc) #64le)
 license=(GPL2 LGPL2.1)
 url="http://wiki.qemu.org/"
 depends=()
