* update openblas to 0.3.17-1

--- a/openblas/PKGBUILD
+++ b/openblas/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=openblas
 _pkgname=OpenBLAS
-pkgver=0.3.15
+pkgver=0.3.17
 pkgrel=1
 pkgdesc="An optimized BLAS library based on GotoBLAS2 1.13 BSD"
 arch=(x86_64 powerpc64le powerpc)
@@ -15,14 +15,13 @@ makedepends=('perl' 'gcc-fortran')
 checkdepends=('cblas')
 provides=('blas=3.9.0')
 conflicts=('blas')
-source=(${_pkgname}-v${pkgver}.tar.gz::https://github.com/xianyi/OpenBLAS/archive/v${pkgver}.tar.gz
-        "${pkgname}-pr3266-ppc.patch::https://patch-diff.githubusercontent.com/raw/xianyi/OpenBLAS/pull/3266.patch")
-sha512sums=('c07964ead5ffe9cf088364697bfe5cb409170663e420bdcd08a6366a028625d2a3c23ee4ddbaf0e625860a9fd08cbbb39f97eb985c366c052696d6f8598a844f'
-            'd0ac122fadd0687e864f9c2c43ecfa232d47d818a6ed9ffa00b63c7b84073348502515f61877e8d104fe0f2f864b1dc147a01430ced9edf6226fe6a91f52792d')
+source=(${_pkgname}-v${pkgver}.tar.gz::https://github.com/xianyi/OpenBLAS/archive/v${pkgver}.tar.gz)
+#        "${pkgname}-pr3266-ppc.patch::https://patch-diff.githubusercontent.com/raw/xianyi/OpenBLAS/pull/3266.patch")
+sha512sums=('a97745c1f050ea44fce5f1722810de469612d374a29796a874d12673d6ad189872160cc2b5d0885790e6562d9d7ade629144c86f2649e668b0d4def36aa74495')
 
 prepare() {
   cd $_pkgname-$pkgver
-  patch -Np1 -i ${srcdir}/${pkgname}-pr3266-ppc.patch
+  #patch -Np1 -i ${srcdir}/${pkgname}-pr3266-ppc.patch
 }
 
 build() {
