* update marisa to 0.2.6-6

--- a/marisa/PKGBUILD
+++ b/marisa/PKGBUILD
@@ -1,13 +1,12 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Contributor: ponsfoot <cabezon dot hashimoto at gmail dot com>
 
 pkgbase=marisa
 pkgname=('marisa' 'perl-marisa' 'python-marisa' 'ruby-marisa')
 pkgver=0.2.6
-pkgrel=5
-arch=(x86_64 powerpc64le)
+pkgrel=6
+arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/s-yata/marisa-trie"
 license=('BSD' 'LGPL')
 makedepends=('python' 'ruby' 'perl' 'swig')
