* update firefox to 91.0-1

--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Schmidtke <sjakub@gmail.com>
 
 pkgname=firefox
-pkgver=90.0.2
+pkgver=91.0
 pkgrel=1
 pkgdesc="Standalone web browser from mozilla.org"
 arch=(x86_64 powerpc64le)
@@ -22,6 +22,7 @@ optdepends=('networkmanager: Location detection via available WiFi networks'
 options=(!emptydirs !makeflags strip)
 source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-$pkgver.source.tar.xz{,.asc}
         $pkgname.desktop
+        identity-icons-brand.svg
         firefox-powerpc-clang.patch
         big-endian-image-decoders.patch
         fix-image-format-warning.patch
@@ -30,9 +31,10 @@ source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-
         flac-no-ffvpx.patch
         firefox-pgo.patch
         avoid-redefinition.patch)
-sha256sums=('35c45dbc21a7bd59e5daa6b3fef7a08c51ff0a1333f47a355bb1cbc840c3ff59'
+sha256sums=('2a4d1f788ab77f68380d4e6ab0b36bd1efd1a4ac9e9c6d10e39377894c077901'
             'SKIP'
             'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
+            'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
             'ad83c0c6195ab742848941be1d9c8f32c1d4a8bc019d8887b42256bafaefb541'
             '0df637d44218524e213814d15d623f27724d8e405390173f6cc385e145110bfe'
             '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
@@ -147,10 +149,14 @@ END
       echo "ac_add_options MOZ_PGO=1" >> ${srcdir}/mozconfig
     ;;
   esac
+
+  mkdir ${srcdir}/.tmp
 }
 
 build() {
   cd firefox-$pkgver
+
+  export TMPDIR=${srcdir}/.tmp
 
   export MOZCONFIG="$srcdir/mozconfig"
   export MOZ_NOSPAM=1
@@ -205,6 +211,9 @@ app.distributor.channel=$pkgname
 app.partner.archlinuxpower=archlinuxpower
 END
 
+  install -Dvm644 ../$pkgname.desktop \
+    "$pkgdir/usr/share/applications/$pkgname.desktop"
+
   local i theme=official
   for i in 16 22 24 32 48 64 128 256; do
     install -Dvm644 browser/branding/$theme/default$i.png \
@@ -214,10 +223,12 @@ END
     "$pkgdir/usr/share/icons/hicolor/192x192/apps/$pkgname.png"
   install -Dvm644 browser/branding/$theme/content/about-logo@2x.png \
     "$pkgdir/usr/share/icons/hicolor/384x384/apps/$pkgname.png"
-  install -Dvm644 browser/branding/$theme/content/identity-icons-brand.svg \
+  install -Dvm644 browser/branding/$theme/content/about-logo.svg \
+    "$pkgdir/usr/share/icons/hicolor/scalable/apps/$pkgname.svg"
+  install -Dvm644 ${srcdir}/identity-icons-brand.svg \
     "$pkgdir/usr/share/icons/hicolor/symbolic/apps/$pkgname-symbolic.svg"
 
-  install -Dvm644 ../$pkgname.desktop \
+  install -Dvm644 ${srcdir}/$pkgname.desktop \
     "$pkgdir/usr/share/applications/$pkgname.desktop"
 
   # Install a wrapper to avoid confusion about binary path
