* update llvm to 12.0.1-3

--- a/llvm/PKGBUILD
+++ b/llvm/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgname=('llvm' 'llvm-libs' 'llvm-ocaml')
 pkgver=12.0.1
-pkgrel=1.1
-_ocaml_ver=4.11.1
+pkgrel=3
+_ocaml_ver=4.12.0
 arch=(x86_64 powerpc64le powerpc)
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
@@ -16,6 +16,7 @@ makedepends=('cmake' 'ninja' 'libffi' 'libedit' 'ncurses' 'libxml2'
 options=('staticlibs')
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
 source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
+        x86-twist-shuffle-mask.patch
         no-strict-aliasing-DwarfCompileUnit.patch
         llvm-link-with-Bsymbolic-functions.patch
         add-fno-semantic-interposition.patch
@@ -25,6 +26,7 @@ source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
         llvm-003-ppc-bigpic.patch)
 sha256sums=('7d9a8405f557cefc5a21bf5672af73903b64749d9bc3a50322239f56f34ffddf'
             'SKIP'
+            'c51b8754f76eb3774f46d530409f6d89f5bb47d90f0d718dbfa861f716b29693'
             'd1eff24508e35aae6c26a943dbaa3ef5acb60a145b008fd1ef9ac6f6c4faa662'
             '560ce1e206c19f4b86f4c583b743db0ad47a610418999350710aafd60ae50fcd'
             'fc8c64267a5d179e9fc24fb2bc6150edef2598c83f5b2d138d14e05ce9f4e345'
@@ -43,6 +45,9 @@ prepare() {
   patch -Np2 -i ../llvm-link-with-Bsymbolic-functions.patch
   # https://reviews.llvm.org/D102453
   patch -Np2 -i ../add-fno-semantic-interposition.patch
+
+  # https://bugs.llvm.org/show_bug.cgi?id=50823
+  patch -Np2 -i ../x86-twist-shuffle-mask.patch
 
   # Work around intermittent 'clang -O -g' crashes
   # https://bugs.llvm.org/show_bug.cgi?id=50611#c3
